# veidtcoin-wallet

./: CMakeLists.txt  LICENSE  README.md
cli/: CLI Commands  main.cpp  walletcli.cpp  walletcli.h
config/: wallet_settings.ini
keys/: walletkeys.cpp  walletkeys.h
rpc/: CMakeLists.txt  walletrpc.cpp  walletrpc.h
src/: main.cpp
src/gui/: splashscreen.cpp  wallet_window.cpp  wallet_window.h
src/themes/: quantum-purple.qss
util/: hasher.cpp  hasher.h  logger.cpp  logger.h
